--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 html {
     font-size: 10px;
-    background: url(https://i.imgur.com/b9r5sEL.jpg) bottom center;
+    background: url(https://www.designyourway.net/blog/wp-content/uploads/2018/01/122294-computer-backgrounds-hd-1920x1200-samsung-galaxy.jpg) bottom center;
     background-size: cover;
   }
   
